<resources>
    <string name="app_name">ПривратникЪ</string>
    <string name="repeat_request">Повторить запрос</string>
    <string name="something_went_wrong">Что-то пошло не так :\'(</string>
    <string name="repeat_sms_code">Повторить отправку\nSMS-кода через %1$d сек.</string>
    <string name="lbl_your_phone">Ваш номер телефона</string>
    <string name="lbl_get_sms_code">Получить SMS-код</string>
    <string name="lbl_enter_sms_code">Введите SMS-код</string>
    <string name="tmp_code">1234</string>
    <string name="lbl_phone_number">+7(___) ___-__-__</string>
    <string name="lbl_your_email">Ваш e-mail</string>
    <string name="lbl_comment">Комментарий</string>
    <string name="lbl_send">Отправить</string>
    <string name="lbl_back">Назад</string>
    <string name="et_comment">Введен неверный SMS-код...</string>
    <string name="lbl_open">Открыть</string>
    <string name="barrier_behind_house">Шлагбаум за домом</string>
    <string name="tmp_address">ул. Власова 69</string>
    <string name="tmp_phone">+7(961)785-71-98</string>
    <string name="old_equipment">На шлагбауме установлено\nустаревшее оборудование,\nзакажите его модернизацию</string>
    <string name="lbl_modernization">Модернизация</string>
    <string name="lvl_open_beside">Открывать когда рядом</string>
    <string name="lbl_go_out">Выйти</string>
    <string name="lbl_technical_support">Техническая поддержка</string>
    <string name="lbl_launch_demo_training">Запуск демо обучения</string>
    <string name="lbl_right_hand_control">Управление правой рукой</string>
    <string name="title_main">Управляемые объекты</string>
    <string name="name_barrier">Название шлагбаума</string>
    <string name="address_barrier">Адрес шлагбаума</string>
    <string name="delete_barrier">Удалить шлагбаум</string>
    <string name="lbl_phone_number_opening_barrier">Номер телефона\nоткрытия шлагбаума</string>
    <string name="lbl_add">Добавить</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tmp_data">28 января 16:15</string>
    <string name="tmp_question">Здравствуйте, как добавить новый шлагбаум?</string>
    <string name="tmp_answer">При добавление нового шлагбаума, необходимо нажать кнопку "Добавить шлагбаум" и вписать все данные о новом шлагбауме</string>
    <string name="add">Добавить</string>
    <string name="save">Сохранить</string>
    <string name="alert_title">Раздел в разработке</string>
    <string name="alert_message">Данный раздел появится чуть позже, не переживайте.</string>
    <string name="permission_info_rationale">Необходимо разрешения для работы приложения</string>
    <string name="server_error">Server Error</string>
    <string name="choose_action">Выберите действие</string>
    <string name="gallery_pick">Изображение из галереи</string>
    <string name="camera_pick">Сфотографировать</string>

</resources>
