<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_very_big_margin"
        android:src="@drawable/logo_blue" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:src="@drawable/support_blue" />

    <TextView
        style="@style/PrimaryStandard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_small_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/lbl_your_phone" />

    <TextView
        android:id="@+id/etPhone"
        style="@style/editTextRound"
        android:layout_width="230dp"
        android:gravity="center"
        android:text="+7(123)456-78-90" />

    <TextView
        style="@style/GraySmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Проверьте правильность заполнения" />

    <TextView
        style="@style/PrimaryStandard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_small_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/lbl_your_email" />

    <EditText
        android:id="@+id/etEmail"
        style="@style/editTextRound"
        android:layout_width="230dp"
        android:hint="exsamle@gmail.com"
        android:textColorHint="@color/color_separate_line" />

    <TextView
        style="@style/PrimaryStandard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_small_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/lbl_comment" />

    <EditText
        android:id="@+id/etComment"
        style="@style/editTextRound"
        android:layout_width="230dp"
        android:layout_height="100dp"
        android:gravity="left"
        android:hint="@string/et_comment"
        android:textColorHint="@color/colorPrimary"
        android:textSize="12dp" />

    <Button
        android:id="@+id/btnGetSmsCode"
        style="@style/BlueButton"
        android:layout_width="120dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/lbl_send"
        android:textAllCaps="false"
        android:textColor="@color/light_background" />

    <TextView
        android:id="@+id/tvBack"
        style="@style/PrimaryStandard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_small_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/lbl_back" />


</LinearLayout>


