<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/activity_big_margin"
    android:layout_marginTop="@dimen/activity_big_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/PrimaryStandard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_right_hand_control"
            android:layout_centerVertical="true"/>

        <CheckBox
            android:id="@+id/cbOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/activity_big_margin"
            android:buttonTint="@color/colorPrimary"
            android:checked="false"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tvDemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_launch_demo_training"
        style="@style/PrimaryStandard"
        android:layout_marginTop="@dimen/activity_ultra_big_margin"/>

    <TextView
        android:id="@+id/tvSupport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_technical_support"
        style="@style/YellowStandard"
        android:layout_marginTop="@dimen/activity_big_margin"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnLogout"
            style="@style/RedButton"
            android:layout_width="180dp"
            android:layout_marginBottom="@dimen/activity_ultra_big_margin"
            android:text="@string/lbl_go_out"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>
</LinearLayout>

