<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_height"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivPhotoBarrier"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/activity_middle_margin"
            android:src="@drawable/support_blue" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNameBarrier"
                style="@style/WhiteStandard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/barrier_behind_house" />

            <TextView
                android:id="@+id/tvAddressBarrier"
                style="@style/WhiteSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tmp_address" />

            <TextView
                android:id="@+id/tvPhoneBarrier"
                style="@style/WhiteSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tmp_phone" />

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout">

        <Button
            android:id="@+id/btnOpen"
            style="@style/WhiteButtonOpen"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_middle_margin"
            android:text="@string/lbl_open" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_settings" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/activity_big_margin"
            android:src="@drawable/ic_settings" />
    </RelativeLayout>


</RelativeLayout>

