<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_middle_margin"
    android:layout_marginTop="@dimen/activity_middle_margin"
    android:layout_marginBottom="@dimen/activity_middle_margin"
    android:orientation="vertical">

    <TextView
        style="@style/GraySmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tmp_data" />


    <TextView
        android:id="@+id/tvQuestion"
        style="@style/PrimaryStandard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_small_margin"
        android:text="@string/tmp_question" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_light"
        android:orientation="vertical">

        <TextView
            style="@style/GraySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_middle_margin"
            android:layout_marginTop="@dimen/activity_small_margin"
            android:text="@string/tmp_data" />

        <TextView
            android:id="@+id/etPhone"
            style="@style/BlackSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_middle_margin"
            android:layout_marginRight="@dimen/activity_middle_margin"
            android:layout_marginBottom="@dimen/activity_middle_margin"
            android:text="@string/tmp_answer" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSend"
        style="@style/BlueButton"
        android:layout_width="220dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="Задать вопрос" />

</LinearLayout>


