<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivPhoto"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/activity_big_margin"
            android:src="@drawable/editphoto" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_middle_margin">

                <TextView
                    style="@style/PrimaryStandard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_barrier" />

                <ImageView
                    android:id="@+id/ivSettingsName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/activity_big_margin"
                    android:padding="@dimen/activity_small_margin"
                    android:src="@drawable/edit_2" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/PrimaryStandard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address_barrier" />

                <ImageView
                    android:id="@+id/ivSettingsAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/activity_small_margin"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/activity_big_margin"
                    android:src="@drawable/edit_2" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/PrimaryStandard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_big_margin"
            android:layout_centerVertical="true"
            android:text="@string/lvl_open_beside" />

        <CheckBox
            android:id="@+id/cbOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/activity_big_margin"
            android:buttonTint="@color/colorPrimary"
            android:checked="true"/>
    </RelativeLayout>

    <include layout="@layout/separate_line" />

    <RelativeLayout
        android:id="@+id/Modernization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <TextView
            android:id="@+id/tvOldEquipment"
            style="@style/YellowSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/old_equipment" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/tvOldEquipment"
            android:layout_margin="@dimen/activity_small_margin"
            android:src="@drawable/attention"
            android:layout_alignBaseline="@+id/tvOldEquipment"/>

        <Button
            android:id="@+id/btnModernization"
            style="@style/BlueButton"
            android:layout_width="180dp"
            android:layout_below="@+id/tvOldEquipment"
            android:layout_centerHorizontal="true"
            android:text="@string/lbl_modernization" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/DeleteBarrier"
            style="@style/RedButton"
            android:layout_width="180dp"
            android:layout_marginBottom="@dimen/activity_ultra_big_margin"
            android:text="@string/delete_barrier"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>
</LinearLayout>

