<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_height"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    card_view:cardBackgroundColor="@color/colorPrimary"
    card_view:cardCornerRadius="@dimen/corner_radius"
    card_view:cardElevation="@dimen/card_elevation"
    android:layout_margin="@dimen/activity_small_margin">

    <!--android:background="@drawable/rounded_background"-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivPhoto"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="@dimen/activity_middle_margin"
                android:layout_gravity="center_vertical"
                android:src="@drawable/addphoto" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvName"
                    style="@style/WhiteStandard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/barrier_behind_house" />

                <TextView
                    android:id="@+id/tvAddress"
                    style="@style/WhiteSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tmp_address" />

                <TextView
                    android:id="@+id/tvNumber"
                    style="@style/WhiteSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tmp_phone" />

            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout">

            <Button
                android:id="@+id/btnOpen"
                android:layout_width="110dp"
                android:layout_height="35dp"
                android:minHeight="35dp"
                android:maxHeight="35dp"
                android:background="@drawable/round_button_selector"
                android:textColor="@drawable/round_button_text_selector"
                android:layout_marginStart="@dimen/activity_middle_margin"
                android:layout_marginBottom="@dimen/activity_middle_margin"
                android:layout_centerVertical="true"
                android:text="@string/lbl_open" />

            <ImageView
                android:id="@+id/ivCamera"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerInParent="true"
                android:src="@drawable/video" />

            <ImageView
                android:id="@+id/ivSettings"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="@dimen/activity_big_margin"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/setting_1" />
        </RelativeLayout>


    </RelativeLayout>
</android.support.v7.widget.CardView>

